# mu

./: .appveyor.yml  .coveragerc  .deepsource.toml  .gitignore  .gitmodules  .readthedocs.yml  .travis.yml  AUTHORS  AUTHORS.rst  CHANGES.rst  CODE_OF_CONDUCT.rst  CONTRIBUTING.rst  ISSUE_TEMPLATE.rst  MANIFEST.in  Makefile  Pipfile  README.rst  ROADMAP.rst  apply-pr.cmd  appveyor.yml  build.bat  check.py  conftest.py  force-rechecks.txt  fresh-run.cmd  fresh-venv.cmd  make.cmd  make.py  mu.py  one-venv-notes.txt  pyproject.toml  pytest.ini  requirements.txt  requirements_pi.txt  reset-mutex.py  rtd_requirements.txt  run-mu.sh  run.py  setup.cfg  setup.py  (+8 more)
.github/ISSUE_TEMPLATE/: ISSUE_TEMPLATE.md  bug_report.yml  config.yml
.github/codeql/: codeql-config.yml
.github/workflows/: build.yml  codeql.yml  test.yml
_qt-trial/: q1.py  q2.py  slowgen.py
conf/: 90-usb-microbit.rules  mu.appdata.xml  mu.codewith.editor.desktop  mu.desktop
debian/: changelog  control  copyright  mu.install  py3dist-overrides  rules
design/: file_reading_and_writing.rst
docs/: Makefile  api.rst  architecture.rst  changes.rst  conf.py  constitution.rst  copyright.rst  debugger.rst  design.rst  development.rst  first-steps.rst  index.rst  install.rst  license.rst  make.bat  modes.rst  packaging.rst  release.rst  roadmap.rst  setup.rst  tests.rst  translations.rst  user-experience.rst  website.rst
docs/design/: file_reading_and_writing.rst  line-endings.rst  runtime_virtual_environment.rst  settings-and-sessions.rst  settings-and-sessions.txt  settings.rst  template-decision.txt
docs/icon_brief/: README.txt
docs/logo_design/: mu-logo-large.xcf  splash.xcf
flatpak/: mu.codewith.Editor.appdata.xml  mu.codewith.Editor.desktop  mu.codewith.Editor.yml
mu/: __about__.py  __init__.py  __main__.py  app.py  config.py  controller.py  editor.py  i18n.py  interface.py  localedetect.py  logic.py  mu-debug.py  mu_debug.py  repl.py  settings.py  upython_device.py  virtual_environment.py
mu/contrib/: appdirs.py  atomicfile.py  files.py  mflash.py  microfs.py  minifs.py  mpyfs.py  nudatus.py  pixelfs.py  pyboard.py  uflash.py
mu/debugger/: client.py  config.py  runner.py  utils.py
mu/hybrid/: editor.py
mu/interface/: __init__.py  dialogs.py  editor.py  main.py  panes.py  themes.py  widgets.py  workers.py
mu/models/: editor.py
package/: README.md  README.rst  create_msi.bat  create_msi.py  dmg_settings.py  install_linux.sh  install_osx.sh  install_pip3.sh  installer32.cfg  installer64.cfg  mu.wxs  mu_nsist.py  osx_adjustments.py  pyinstaller.spec  qt.conf
pr370/: generate_newlines.py  generate_test_files.py  generate_undecodable_file.py  get_encoding.py  newlines-rn.txt
snap/: snapcraft.yaml
tests/: README.rst  bigscript.py  bigscript_bad.py  bigscript_mangled.py  conftest.py  customhextest.hex  fixtures.py  session.json  settings.json  settingswithoutworkspace.json  support.py  test_app.py  test_editor.py  test_init.py  test_interface.py  test_localedetect.py  test_logic.py  test_logic_read.py  test_logic_read_write.py  test_resources.py  test_settings.py  test_virtual_environment.py
utils/: README.rst  adafruit.json  adafruit_api.py  avatar.py  bottle.json  bottle_api.py  completion_convert.py  flask.json  flask_api.py  gh_downloads.py  lego.json  lego_api.py  mkapi.py  pgzero_api.json  pgzero_api.py  picozero_api.json  picozero_api.py  python3_api.py  python_api.json
(+192 files in other folders)
