[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools", "wheel", "toml"]

[tool.briefcase]
project_name = "Mu Editor"
bundle = "mu.codewith.editor"
version = "1.1.0a2"
author = "Nicholas H. Tollervej"
author_email = "ntoll@ntoll.org"
requires = []

[tool.briefcase.app.mu]
formal_name = "mu-editor"
description = "A simple Python editor for beginner programmers."
requires = ['PyQt5==5.13.2;"arm" not in platform_machine',
            'QScintilla==2.11.3;"arm" not in platform_machine',
            'PyQtChart==5.13.1;"arm" not in platform_machine',
            # `flake8` is actually a testing/packaging dependency that, among other
            # packages, brings in `pycodestyle` and `pyflakes` which are runtime
            # dependencies. For the sake of "locality", it is being declared here,
            # though. Regarding these packages' versions, please refer to:
            # http://flake8.pycqa.org/en/latest/faq.html#why-does-flake8-use-ranges-for-its-dependencies
            "flake8 >= 3.8.3",
            "pyserial==3.4",
            "qtconsole==4.7.4",
            "pgzero==1.2",
            "appdirs>=1.4.3",
            "semver>=2.8.0",
            "nudatus>=0.0.3",
            'black>=19.10b0;python_version > "3.5"',
            "Flask==1.1.2"]

sources = ['mu']

[tool.briefcase.app.mu.macOS]
requires = []
icon = "package/icons/mac_icon"
support_package = "https://github.com/mu-editor/mu_portable_python_macos/releases/download/0.0.6/python3-reduced.tar.gz"